<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_titulo_nombres_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_titulo_nombres" />

            <TextView
                android:id="@+id/textView_nombre_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/vacio"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_titulo_apellido_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_titulo_apellidos" />

            <TextView
                android:id="@+id/textView_apellido_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/vacio"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_titulo_base_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_titulo_base" />

            <TextView
                android:id="@+id/textView_base_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/vacio"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_titulo_exponente_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_titulo_exponente" />

            <TextView
                android:id="@+id/textView_exponente_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/vacio"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_titulo_factorial_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_titulo_factorial" />

            <TextView
                android:id="@+id/textView_factorial_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/vacio"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_titulo_potencia_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_titulo_potencia" />

            <TextView
                android:id="@+id/textView_potencia_activity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/vacio"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_siguiente_activity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45px"
        android:onClick="AbrirActivityDos"
        android:text="@string/button_siguiente" />

    <Button
        android:id="@+id/button_mostrar_activity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45px"
        android:onClick="MostrarResultados"
        android:text="@string/button_resultados" />
</LinearLayout>